# ultrasonic-phy-layer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cliff.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  stale.yml
.github/workflows/: benchmark.yml  build.yml  changelog.yml  ci.yml  codeql.yml  dependency-review.yml  labeler.yml  lint-pr.yml  release.yml
docs/: CI_CD.md  MATHEMATICAL_MODEL.md  PRD.md  ROADMAP.md  TECH_STACK.md
native/: CMakeLists.txt  CMakePresets.json
native/Fuzzing/: CMakeLists.txt  fuzz_api.c  fuzz_crc.c  fuzz_css.c  fuzz_ofdm.c  fuzz_rs.c
native/benchmarks/: CMakeLists.txt  bench_util.h  benchmark_crc.c  benchmark_css.c  benchmark_fft.c  benchmark_ofdm.c  benchmark_rs.c
native/include/: soundwave.h  soundwave_api.h
native/include/soundwave/: audio.h  audio_io.h  cfo.h  chanest.h  common.h  crc.h  css.h  demodulator.h  encoder.h  equalizer.h  fec.h  modulator.h  ofdm.h  packet.h  rs.h  soundwave.h  sync.h  synchronizer.h  types.h
native/scripts/: build.sh
native/src/: demodulator.c  encoder.c  modulator.c  synchronizer.c
native/src/api/: ffi_helpers.c  soundwave_api.c
native/src/audio/: audio_io.c
native/src/chanest/: chanest.c
native/src/crc/: crc32.c
native/src/css/: css_demodulate.c  css_modulate.c
native/src/equalizer/: equalizer.c
native/src/fec/: fec.c
native/src/ofdm/: ofdm_demodulate.c  ofdm_modulate.c
native/src/packet/: packet.c
native/src/rs/: rs_decoder.c  rs_encoder.c
native/src/sync/: sync_cfo.c  sync_frame.c
native/tests/: CMakeLists.txt  integration_loopback.c  test_api.c  test_audio.c  test_cfo.c  test_crc.c  test_css_demodulate.c  test_css_modulate.c  test_e2e.c  test_encoder.c  test_fft.c  test_modulator.c  test_ofdm_demodulate.c  test_ofdm_modulate.c  test_rs_decoder.c  test_rs_encoder.c  test_sync.c
soundwave_app/lib/: main.dart
soundwave_app/lib/engine/: message_history.dart  rx_engine.dart  tx_engine.dart
soundwave_app/lib/export/: message_exporter.dart  signal_importer.dart  wav_recorder.dart
soundwave_app/lib/native/: bindings.dart  soundwave_native.dart
soundwave_app/lib/screens/: dashboard.dart  monitor.dart  settings.dart
soundwave_app/lib/services/: audio_service.dart
soundwave_app/lib/state/: app_state.dart
soundwave_app/test/: main_test.dart
soundwave_app/test/export/: message_exporter_test.dart  signal_importer_test.dart
soundwave_app/test/screens/: dashboard_test.dart  settings_test.dart
soundwave_app/test/state/: app_state_test.dart
